--- a/api/connector/Vortex.Adapters.Connector.Tc3.AdsConnector.yml
+++ b/api/connector/Vortex.Adapters.Connector.Tc3.AdsConnector.yml
@@ -39,6 +39,7 @@ items:
   - Vortex.Adapters.Connector.Tc3.AdsConnector.ReadBatch(System.Collections.Generic.IEnumerable{Vortex.Connector.IValueTag})
   - Vortex.Adapters.Connector.Tc3.AdsConnector.ReadFully(System.IO.Stream)
   - Vortex.Adapters.Connector.Tc3.AdsConnector.ReadSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
+  - Vortex.Adapters.Connector.Tc3.AdsConnector.readSumMutex
   - Vortex.Adapters.Connector.Tc3.AdsConnector.ReloadConnector
   - Vortex.Adapters.Connector.Tc3.AdsConnector.rwopsAction
   - Vortex.Adapters.Connector.Tc3.AdsConnector.SetAllToCyclicReading
@@ -50,6 +51,7 @@ items:
   - Vortex.Adapters.Connector.Tc3.AdsConnector.Timeout
   - Vortex.Adapters.Connector.Tc3.AdsConnector.WriteBatch(System.Collections.Generic.IEnumerable{Vortex.Connector.IValueTag})
   - Vortex.Adapters.Connector.Tc3.AdsConnector.WriteSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
+  - Vortex.Adapters.Connector.Tc3.AdsConnector.writeSumMutex
   langs:
   - csharp
   - vb
@@ -406,6 +408,35 @@ items:
   modifiers.vb:
   - Public
   - Shared
+- uid: Vortex.Adapters.Connector.Tc3.AdsConnector.readSumMutex
+  commentId: F:Vortex.Adapters.Connector.Tc3.AdsConnector.readSumMutex
+  id: readSumMutex
+  parent: Vortex.Adapters.Connector.Tc3.AdsConnector
+  langs:
+  - csharp
+  - vb
+  name: readSumMutex
+  nameWithType: AdsConnector.readSumMutex
+  fullName: Vortex.Adapters.Connector.Tc3.AdsConnector.readSumMutex
+  type: Field
+  source:
+    remote:
+      path: vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
+      branch: master
+      repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
+    id: readSumMutex
+    path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
+    startLine: 101
+  assemblies:
+  - Vortex.Adapters.Connector.Tc3
+  namespace: Vortex.Adapters.Connector.Tc3
+  syntax:
+    content: volatile object readSumMutex
+    return:
+      type: System.Object
+    content.vb: readSumMutex As Object
+  modifiers.csharp:
+  - volatile
 - uid: Vortex.Adapters.Connector.Tc3.AdsConnector.ReadSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
   commentId: M:Vortex.Adapters.Connector.Tc3.AdsConnector.ReadSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
   id: ReadSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
@@ -424,7 +455,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: ReadSum
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 107
+    startLine: 109
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -459,7 +490,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: chunk_size
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 187
+    startLine: 188
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -472,6 +503,35 @@ items:
   - readonly
   modifiers.vb:
   - ReadOnly
+- uid: Vortex.Adapters.Connector.Tc3.AdsConnector.writeSumMutex
+  commentId: F:Vortex.Adapters.Connector.Tc3.AdsConnector.writeSumMutex
+  id: writeSumMutex
+  parent: Vortex.Adapters.Connector.Tc3.AdsConnector
+  langs:
+  - csharp
+  - vb
+  name: writeSumMutex
+  nameWithType: AdsConnector.writeSumMutex
+  fullName: Vortex.Adapters.Connector.Tc3.AdsConnector.writeSumMutex
+  type: Field
+  source:
+    remote:
+      path: vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
+      branch: master
+      repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
+    id: writeSumMutex
+    path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
+    startLine: 189
+  assemblies:
+  - Vortex.Adapters.Connector.Tc3
+  namespace: Vortex.Adapters.Connector.Tc3
+  syntax:
+    content: volatile object writeSumMutex
+    return:
+      type: System.Object
+    content.vb: writeSumMutex As Object
+  modifiers.csharp:
+  - volatile
 - uid: Vortex.Adapters.Connector.Tc3.AdsConnector.WriteSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
   commentId: M:Vortex.Adapters.Connector.Tc3.AdsConnector.WriteSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
   id: WriteSum(System.Collections.Generic.IEnumerable{Vortex.Adapters.Connector.Tc3.AdsValueTypes.IAdsBaseType})
@@ -490,7 +550,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: WriteSum
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 195
+    startLine: 197
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -525,7 +585,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: ConnectToController
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 277
+    startLine: 276
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -564,7 +624,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: HasAdsSymbolVersionChanged
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 292
+    startLine: 291
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -591,7 +651,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: InvalidateSymbols
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 293
+    startLine: 292
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -617,7 +677,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: AdsClient_AdsSymbolVersionChanged
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 311
+    startLine: 310
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -648,7 +708,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: ReloadConnector
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 322
+    startLine: 321
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -681,7 +741,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: AdsClient_AdsStateChanged
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 333
+    startLine: 332
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -712,7 +772,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: qr
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 363
+    startLine: 362
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -739,7 +799,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: CyclicRead
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 368
+    startLine: 367
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -771,7 +831,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: CyclicWrite
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 381
+    startLine: 380
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -803,7 +863,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: CyclicWriteRead
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 394
+    startLine: 393
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -835,7 +895,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: StartReadWriteOps
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 411
+    startLine: 410
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -867,7 +927,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: AddTagLink
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 458
+    startLine: 457
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -896,7 +956,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: InitializeConnector
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 466
+    startLine: 465
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -924,7 +984,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: Client
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 511
+    startLine: 510
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -964,7 +1024,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: OnlineVariables
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 530
+    startLine: 529
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1002,7 +1062,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: PreventSynchronousAccess
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 546
+    startLine: 545
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1039,7 +1099,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: _justBuilt
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 552
+    startLine: 551
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1066,7 +1126,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: BuildAndStart
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 553
+    startLine: 552
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1101,7 +1161,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: Dispose
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 571
+    startLine: 570
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1135,7 +1195,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: ReadBatch
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 578
+    startLine: 577
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1174,7 +1234,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: SetAllToCyclicReading
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 586
+    startLine: 585
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1216,7 +1276,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: WriteBatch
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 595
+    startLine: 594
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1255,7 +1315,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: AMSID
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 606
+    startLine: 605
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1290,7 +1350,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: DoNotStartReportingConsole
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 620
+    startLine: 619
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1328,7 +1388,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: ErrorCount
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 625
+    startLine: 624
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1366,7 +1426,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: LoadingStatus
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 633
+    startLine: 632
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1406,7 +1466,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: Name
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 643
+    startLine: 642
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1444,7 +1504,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: NetId
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 653
+    startLine: 652
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1482,7 +1542,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: SrvPort
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 665
+    startLine: 664
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1520,7 +1580,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: Timeout
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 688
+    startLine: 687
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1558,7 +1618,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: InvokeRpc
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 701
+    startLine: 700
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1603,7 +1663,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: OnlineTags
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 706
+    startLine: 705
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1641,7 +1701,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: SymbolLoadMethod
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 711
+    startLine: 710
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
@@ -1678,7 +1738,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: SymbolLoadingMode
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/AdsConnector/AdsConnector.cs
-    startLine: 716
+    startLine: 715
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3
