--- a/api/connector/Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.yml
+++ b/api/connector/Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.yml
@@ -9,11 +9,11 @@ items:
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.#ctor(Vortex.Connector.IVortexObject,System.String,System.String)
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Client
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueLength(System.String)
+  - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize(System.String)
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.GetSynchron
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Read(System.IO.BinaryReader)
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ReadFromBinaryReader(System.IO.BinaryReader)
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.SetSynchron(System.String)
-  - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Write(System.IO.BinaryWriter)
   - Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.WriteViaBinaryWriter(System.IO.BinaryWriter)
   langs:
@@ -368,41 +368,6 @@ items:
       type: System.String
     content.vb: Function FixValueLength(val As String) As String
   overload: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueLength*
-- uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
-  commentId: P:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
-  id: ValueToWrite
-  parent: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString
-  langs:
-  - csharp
-  - vb
-  name: ValueToWrite
-  nameWithType: AdsWString.ValueToWrite
-  fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
-  type: Property
-  source:
-    remote:
-      path: vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/ValueTypes/AdsWString.cs
-      branch: master
-      repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
-    id: ValueToWrite
-    path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/ValueTypes/AdsWString.cs
-    startLine: 110
-  assemblies:
-  - Vortex.Adapters.Connector.Tc3
-  namespace: Vortex.Adapters.Connector.Tc3.AdsValueTypes
-  syntax:
-    content: public object ValueToWrite { get; }
-    parameters: []
-    return:
-      type: System.Object
-    content.vb: Public ReadOnly Property ValueToWrite As Object
-  overload: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite*
-  modifiers.csharp:
-  - public
-  - get
-  modifiers.vb:
-  - Public
-  - ReadOnly
 - uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Read(System.IO.BinaryReader)
   commentId: M:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Read(System.IO.BinaryReader)
   id: Read(System.IO.BinaryReader)
@@ -505,6 +470,37 @@ items:
       description: "\nTODO The reader.\n"
     content.vb: Sub ReadFromBinaryReader(reader As BinaryReader)
   overload: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ReadFromBinaryReader*
+- uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize(System.String)
+  commentId: M:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize(System.String)
+  id: FixValueSize(System.String)
+  parent: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString
+  langs:
+  - csharp
+  - vb
+  name: FixValueSize(String)
+  nameWithType: AdsWString.FixValueSize(String)
+  fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize(System.String)
+  type: Method
+  source:
+    remote:
+      path: vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/ValueTypes/AdsWString.cs
+      branch: master
+      repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
+    id: FixValueSize
+    path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/ValueTypes/AdsWString.cs
+    startLine: 157
+  assemblies:
+  - Vortex.Adapters.Connector.Tc3
+  namespace: Vortex.Adapters.Connector.Tc3.AdsValueTypes
+  syntax:
+    content: string FixValueSize(string val)
+    parameters:
+    - id: val
+      type: System.String
+    return:
+      type: System.String
+    content.vb: Function FixValueSize(val As String) As String
+  overload: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize*
 - uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.WriteViaBinaryWriter(System.IO.BinaryWriter)
   commentId: M:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.WriteViaBinaryWriter(System.IO.BinaryWriter)
   id: WriteViaBinaryWriter(System.IO.BinaryWriter)
@@ -523,7 +519,7 @@ items:
       repo: http://192.168.0.28/foxtroth.vortex/vortex.base/_git/ivf
     id: WriteViaBinaryWriter
     path: ../ivf/vortex.connectors/src/connectors/Vortex.Adapters.Connector.Tc3/ValueTypes/AdsWString.cs
-    startLine: 157
+    startLine: 177
   assemblies:
   - Vortex.Adapters.Connector.Tc3
   namespace: Vortex.Adapters.Connector.Tc3.AdsValueTypes
@@ -3763,11 +3759,6 @@ references:
   name: FixValueLength
   nameWithType: AdsWString.FixValueLength
   fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueLength
-- uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite*
-  commentId: Overload:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
-  name: ValueToWrite
-  nameWithType: AdsWString.ValueToWrite
-  fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ValueToWrite
 - uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Read*
   commentId: Overload:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.Read
   name: Read
@@ -3881,6 +3872,11 @@ references:
   name: ReadFromBinaryReader
   nameWithType: AdsWString.ReadFromBinaryReader
   fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.ReadFromBinaryReader
+- uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize*
+  commentId: Overload:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize
+  name: FixValueSize
+  nameWithType: AdsWString.FixValueSize
+  fullName: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.FixValueSize
 - uid: Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.WriteViaBinaryWriter*
   commentId: Overload:Vortex.Adapters.Connector.Tc3.AdsValueTypes.AdsWString.WriteViaBinaryWriter
   name: WriteViaBinaryWriter
