--- a/articles/units/Inxton.Vortex.Presentation.Wpf/toc.yml
+++ b/articles/units/Inxton.Vortex.Presentation.Wpf/toc.yml
@@ -1,5 +1,8 @@
 - name: Generating user interface
   href: README.md
+
+- name: Renderable content control
+  href : renderable_content_control.md
   
 - name: How it works
   href : how_it_works.md
