--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/MTS/Develop/gh/inxton/ivf.documentation",
+  "source_base_path": "C:/W/Develop/mts/ivf.documentation",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -2544,7 +2544,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/api/index.html",
-          "hash": "48DUE0MSqgbfYL5jToJ/7A=="
+          "hash": "E3XjkoxwERNnaCZy5tktlw=="
         }
       },
       "is_incremental": true,
@@ -4308,7 +4308,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/01core/getting_started/getting_started.html",
-          "hash": "Ok0OfNefRmuxzPyvCN7HdQ=="
+          "hash": "7U6NfRySmuGREmGXBKIZAA=="
         }
       },
       "is_incremental": true,
@@ -4364,7 +4364,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/02essentials/getting_started/getting_started.html",
-          "hash": "0eDgtZC8tUUKtywMLCsIBA=="
+          "hash": "b1WIkkLJvJFkSMIMbW3YLw=="
         }
       },
       "is_incremental": true,
@@ -4420,7 +4420,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/03advanced/getting_started/README.html",
-          "hash": "dvY5JfpUas7p97L9aNdt6Q=="
+          "hash": "9tWpPb5AjX3Aa7mhU10bRw=="
         }
       },
       "is_incremental": true,
@@ -4476,7 +4476,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/03advanced/getting_started/getting_started.html",
-          "hash": "uZOIIlxlG9MEA1A7kFZaBw=="
+          "hash": "6dDNfm565NZ/j2ohGyvWog=="
         }
       },
       "is_incremental": true,
@@ -4532,7 +4532,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/common/ExtensionInstalation.html",
-          "hash": "NnC1+HGwJ8pfTw2caHsZWw=="
+          "hash": "lOtv9j9IPwAWMfmPwW5SvA=="
         }
       },
       "is_incremental": true,
@@ -4544,7 +4544,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/common/INSTALLATION.html",
-          "hash": "pO6C+lFM9whReNvy1K/png=="
+          "hash": "0Y0UiY6ws8O8d671se3mEQ=="
         }
       },
       "is_incremental": true,
@@ -4556,7 +4556,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/common/LicenseInstallation.html",
-          "hash": "yzLEKdPyDyddzhPi1uuypQ=="
+          "hash": "DCqd0sBuPriTKEhAAPvj0w=="
         }
       },
       "is_incremental": true,
@@ -4568,7 +4568,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/common/PREREQUISITES.html",
-          "hash": "8j2JH5oXVgBtMWl51AM0aQ=="
+          "hash": "x6V5gJD97KJCy9b75wavSw=="
         }
       },
       "is_incremental": true,
@@ -4635,7 +4635,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/howtos/diag/diag.html",
-          "hash": "fImqYoen6jrV+NJYfnjMoQ=="
+          "hash": "Mkhbau4/S9cpe8uFKCShRA=="
         }
       },
       "is_incremental": true,
@@ -4680,7 +4680,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/howtos/influxdb/influxdb.html",
-          "hash": "KNaot0DXkLWkiLHpj+HQVw=="
+          "hash": "mmS7vivUcrY0RyHbnlQJlQ=="
         }
       },
       "is_incremental": true,
@@ -4725,7 +4725,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/howtos/invoke_csharp/invoke_csharp.html",
-          "hash": "yfKzzld6VJuptreu4AoTow=="
+          "hash": "WAyY4N9WEFHNXJzfpJikpw=="
         }
       },
       "is_incremental": true,
@@ -4781,7 +4781,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/howtos/recipes/recipes.html",
-          "hash": "HF3xr7eyUkK4HVGBRWCPaw=="
+          "hash": "U522EQIeIBGHSjaFLm+yVg=="
         }
       },
       "is_incremental": true,
@@ -4793,7 +4793,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/intro.html",
-          "hash": "w6cFYydxsA/Ceijq4f7beg=="
+          "hash": "kCe+LroJ0A6zwmq40Zn81A=="
         }
       },
       "is_incremental": true,
@@ -4805,7 +4805,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Connector/Conceptual/PrimitiveTwins.html",
-          "hash": "3BriztPGUAPZ1dsJoYy6VQ=="
+          "hash": "UFk7GC4TachGX524goT8ZQ=="
         }
       },
       "is_incremental": true,
@@ -4817,7 +4817,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Connector/README.html",
-          "hash": "5dsQzyzpSOzyPZAtHBlBlA=="
+          "hash": "V7zit0F3ilamqlViG7yJVQ=="
         }
       },
       "is_incremental": true,
@@ -4964,7 +4964,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Controls.Wpf/README.html",
-          "hash": "kGYlG66X/tnKFoxhlyMGlg=="
+          "hash": "rfn9R/eLyLp74aLIaj8/iQ=="
         }
       },
       "is_incremental": true,
@@ -4976,7 +4976,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Styling.Wpf/README.html",
-          "hash": "H2Dse78pitf7gZXOQ1s/Gw=="
+          "hash": "YXOp0NYA+BCzO/TuzkirEA=="
         }
       },
       "is_incremental": true,
@@ -5010,7 +5010,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Styling.Wpf/buttons.html",
-          "hash": "852Jku5nzhY/RgW3L5QkxQ=="
+          "hash": "r57mDZE9Pn4ZCBO2jdWugg=="
         }
       },
       "is_incremental": true,
@@ -5022,7 +5022,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Styling.Wpf/color_system.html",
-          "hash": "sI7+1woDeNZaDKKcpbrxDA=="
+          "hash": "KXPY2NhIUfkALOR0xOs1yw=="
         }
       },
       "is_incremental": true,
@@ -5034,7 +5034,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Styling.Wpf/how_to_apply_styles.html",
-          "hash": "FemuJFoUImGNn7HgXtTRvQ=="
+          "hash": "S8476J62BJh1vABouje7LA=="
         }
       },
       "is_incremental": true,
@@ -5046,7 +5046,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Styling.Wpf/override_color.html",
-          "hash": "HKjyE5ueBaHiYORu7GyE+w=="
+          "hash": "bZlIlbpOtwbfA+gCE/6XLA=="
         }
       },
       "is_incremental": true,
@@ -5058,7 +5058,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Wpf/README.html",
-          "hash": "3Oub0hRoDU0TvP+gC/7o7Q=="
+          "hash": "0wBSr60BSyVEDqbCKO5qHQ=="
         }
       },
       "is_incremental": true,
@@ -5070,7 +5070,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Wpf/how_it_works.html",
-          "hash": "B/voSoQxG8luKKYVzryhhg=="
+          "hash": "dSkG38SeUF/e2FK4VjdFsw=="
         }
       },
       "is_incremental": true,
@@ -5082,7 +5082,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.Vortex.Presentation.Wpf/presentation_types.html",
-          "hash": "8G5faEC5ItGAYiQCfwMVGw=="
+          "hash": "aXv8gy7S35XaPGsKBpL9HA=="
         }
       },
       "is_incremental": true,
@@ -5094,7 +5094,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/AddedProperties.html",
-          "hash": "H4GCLGjHmynEuwOM6LgacQ=="
+          "hash": "7853sxcCPK42PKyvBNh9CA=="
         }
       },
       "is_incremental": true,
@@ -5106,7 +5106,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/Attributes.html",
-          "hash": "o5p3M1u0ykLJzC7Sf8lisA=="
+          "hash": "ctorpx8mZN/dg0Q0+9k1cA=="
         }
       },
       "is_incremental": true,
@@ -5118,7 +5118,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/DocumentationBlock.html",
-          "hash": "01hvfDA7u1YFtFAFnQWVfA=="
+          "hash": "k1JdnXvZvfhiFqUIYEqyIA=="
         }
       },
       "is_incremental": true,
@@ -5130,7 +5130,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/FakeComments.html",
-          "hash": "abcMAPaNFMJ7DAlrsYUgpQ=="
+          "hash": "c+P5xj5lO0rBMIqpKBpR7Q=="
         }
       },
       "is_incremental": true,
@@ -5142,7 +5142,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/IgnoringPartsOfCode.html",
-          "hash": "RxmaM5H5UMYi57y44XRf4Q=="
+          "hash": "ILKH3x+kf1zhYQobZGD6yg=="
         }
       },
       "is_incremental": true,
@@ -5154,7 +5154,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/TwinController.html",
-          "hash": "L4wuBUsexwkbTijSIzdXag=="
+          "hash": "LA6+ky67UA5vleZovvpRxA=="
         }
       },
       "is_incremental": true,
@@ -5166,7 +5166,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/TwinObjects.html",
-          "hash": "uRnEQ99hEc9LqB/K0u2dsQ=="
+          "hash": "qGcdKJXWIKXlhQS0DhIRmA=="
         }
       },
       "is_incremental": true,
@@ -5178,7 +5178,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/Conceptual/Twins.html",
-          "hash": "934Wx889cORrO0L2xkVuxg=="
+          "hash": "kEzy1vr5fVV0s4cX4dOLSA=="
         }
       },
       "is_incremental": true,
@@ -5190,7 +5190,7 @@
       "output": {
         ".html": {
           "relative_path": "docu/articles/units/Inxton.vortex.compiler.console/README.html",
-          "hash": "kAT8qjY2JIwEKnzPJQaASw=="
+          "hash": "jgUAmDA6aJnbhhHlXDURrg=="
         }
       },
       "is_incremental": true,
@@ -30722,7 +30722,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "O88VJtKnEkve3yECo46ptA=="
+          "hash": "cLsG12HDuolkwmdMmWUf6A=="
         }
       },
       "is_incremental": true,
@@ -30737,10 +30737,10 @@
       "output": {
         ".html": {
           "relative_path": "docu/previous_versions/index.html",
-          "hash": "WlTlQTwh3HEaTS4eDluq/Q=="
+          "hash": "BPXSualWkyGVL2CPmzFaCg=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     }
   ],
@@ -30757,7 +30757,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 36,
-          "skipped_file_count": 35
+          "skipped_file_count": 36
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
